--- a/math520hw1.ipynb
+++ b/math520hw1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "f63a1694",
    "metadata": {},
    "outputs": [],
@@ -47,6 +47,31 @@
     "        w[i] = (f[i] - cumsum) / U[i, i]\n",
     "\n",
     "    return w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3c0d10e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "banded_matrix = np.array([\n",
+    "    [5, 2, 0, 0],\n",
+    "    [1, 6, 3, 0],\n",
+    "    [0, 4, 7, 1],\n",
+    "    [0, 0, 5, 8]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2074c69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bandLU"
    ]
   }
  ],
