--- a/math520hw6.ipynb
+++ b/math520hw6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "b46fc8c1",
    "metadata": {},
    "outputs": [],
@@ -115,16 +115,16 @@
     "        G = p0*shapeFn1d(1,x,x1,x2,shapeFn)\n",
     "        Gx = p0*shapeFnDer1d(1,x,x1,x2,shapeFn)\n",
     "        return (f_val * shapeFn1d(i, x, x1, x2, shapeFn) - a_val*Gx*dphi_i - c_val*G*phi_i) * (x2 - x1) / 2\n",
-    "\n",
+    "        \n",
     "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
     "    \n",
     "    if e == 1 and i == 1:  # Adjust for Dirichlet boundary at x=0\n",
-    "        fei -= p0 * a(x1) * shapeFn1d(i, x1, x1, x2, shapeFn)"
+    "        fei += p0 * a(x1) * shapeFn1d(i, x1, x1, x2, shapeFn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "id": "87ff5e24",
    "metadata": {},
    "outputs": [
@@ -151,20 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "80ccfa68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " meij(4,3,2,xh,2,3) = 0.026666666666666672\n",
-      " keij(a,c,4,1,2,xh,2,3) = -37.32799999999999\n",
-      " fei(a,c,f,p0,1,2,xh,2,3) = 4.372766997748158\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f' meij(4,3,2,xh,2,3) = {meij(4,3,2,xh,2,3)}')\n",
     "print(f' keij(a,c,4,1,2,xh,2,3) = {keij(a,c,4,1,2,xh,2,3) }')\n",
@@ -173,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "bd5e38bc",
    "metadata": {},
    "outputs": [],
@@ -205,11 +195,10 @@
     "            if e == 1:\n",
     "                M[0,0] = local_M[-1,-1]\n",
     "            else:\n",
-    "                start = e - 2\n",
     "                for i in range(shapeFn + 1):\n",
     "                    for j in range(shapeFn + 1):\n",
-    "                        global_i = start + i\n",
-    "                        global_j = start + j\n",
+    "                        global_i = e - 2 + i\n",
+    "                        global_j = e - 2 + j\n",
     "                        M[global_i, global_j] += local_M[i, j]\n",
     "        else:\n",
     "            if e == 1:\n",
@@ -228,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "9ae8280c",
    "metadata": {},
    "outputs": [
@@ -260,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "id": "27d37248",
    "metadata": {
     "scrolled": true
@@ -302,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "209617cd",
    "metadata": {},
    "outputs": [],
@@ -334,11 +323,10 @@
     "            if e == 1:\n",
     "                K[0,0] = local_K[-1,-1]\n",
     "            else:\n",
-    "                start = e - 2\n",
     "                for i in range(shapeFn + 1):\n",
     "                    for j in range(shapeFn + 1):\n",
-    "                        global_i = start + i\n",
-    "                        global_j = start + j\n",
+    "                        global_i = e - 2 + i\n",
+    "                        global_j = e - 2 + j\n",
     "                        K[global_i, global_j] += local_K[i, j]\n",
     "        else:\n",
     "            if e == 1:\n",
@@ -357,8 +345,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "a69736b8",
+   "execution_count": 6,
+   "id": "6368c74d",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "069881d4",
+   "id": "8ce02ca3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "2d1d2ed1",
    "metadata": {},
    "outputs": [],
@@ -426,9 +414,21 @@
     "            local_F[i-1] = fei(a, c, f, p0, e, i, xh, shapeFn, noOfIntegPt)\n",
     "\n",
     "        # Assemble local contributions into global load vector\n",
-    "        for i in range(shapeFn + 1):\n",
-    "            global_i = (e - 1) * shapeFn + i\n",
-    "            F[global_i] += local_F[i]\n",
+    "        if shapeFn == 1:\n",
+    "            if e == 1:\n",
+    "                F[0] = local_F[-1]\n",
+    "            else:\n",
+    "                for i in range(shapeFn + 1):\n",
+    "                    global_i = e - 2 + i\n",
+    "                    F[global_i] += local_F[i]\n",
+    "        else:\n",
+    "            if e == 1:\n",
+    "                for i in range (1,2):\n",
+    "                    F[i-1] = local_F[i]\n",
+    "            else:\n",
+    "                for i in range(shapeFn + 1):\n",
+    "                    global_i = 2*e - 3 + i\n",
+    "                    F[global_i] += local_F[i]\n",
     "\n",
     "    # Apply Neumann boundary condition at x = L\n",
     "    F[-1] += QL\n",
@@ -438,27 +438,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f2553da6",
+   "execution_count": 42,
+   "id": "ce54a24c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loadF(a,c,f,p0,-3,xh,1, 2) = [ -7.60629576  -9.23685804 -10.91212221 -12.64546619  40.21711654]\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'loadF(a,c,f,p0,-3,xh,1, 2) = {loadF(a, c, f, p0, -3, xh, 1, 2)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c94dcfe8",
+   "execution_count": 27,
+   "id": "4b108134",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loadF(a,c,f,p0,-3,xh,2,2) = [  4.30383266 -20.47286698  24.39151689 -46.16243908  49.75748328\n",
+      "  -9.95686053]\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'loadF(a,c,f,p0,-3,xh,2,2) = {loadF(a,c,f,p0,-3,xh,2,2)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "66660361",
    "metadata": {},
    "outputs": [],
@@ -487,10 +504,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e039ffcc",
+   "execution_count": 11,
+   "id": "a4eedf6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L2norm1d(f,0,2,5)=1.0905047679741269\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'L2norm1d(f,0,2,5)={L2norm1d(f,0,2,5)}')"
    ]
@@ -498,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5012b680",
+   "id": "90cef1e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,42 +533,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "36d87bc7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(np.array([1, .2, .5, .8]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "24b2254a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1,5):\n",
     "    print(i)"
@@ -551,22 +554,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "f2061efc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(5):\n",
     "    print(i)"
@@ -574,18 +565,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f8153e20",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.  0.4 0.8 1.2 1.6 2. ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xh = np.linspace(0.,2.,6)\n",
     "print(xh)"
@@ -593,8 +576,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b4e01940",
+   "execution_count": null,
+   "id": "d46b430b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,29 +590,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "f4795a57",
+   "execution_count": null,
+   "id": "474d164d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[2]])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "array_2d[0:1,1:2]"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "b2050593",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0.])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1193b417",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.2925078026268055"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fei(a, c, f, p0, 1, 2, xh, 1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ee4fd7da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-10.898803562591137"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fei(a, c, f, p0, 2, 1, xh, 1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d7c6f824",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-7.606295759964332"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3.2925078026268055 + -10.898803562591137"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9c682272",
+   "id": "2d5ab2d2",
    "metadata": {},
    "outputs": [],
    "source": []
