--- a/math520hw6.ipynb
+++ b/math520hw6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "b46fc8c1",
    "metadata": {},
    "outputs": [],
@@ -78,53 +78,42 @@
     "    \"\"\"Computes the mass matrix entry M^e_ij.\"\"\"\n",
     "    x1, x2 = xh[e-1], xh[e]\n",
     "    \n",
-    "    def integrand(xi):\n",
-    "        x = 0.5 * ((x2 - x1) * xi + x1 + x2)  # Transform ξ to x\n",
-    "        return shapeFn1d(i, x, x1, x2, shapeFn) * shapeFn1d(j, x, x1, x2, shapeFn) * (x2 - x1) / 2\n",
+    "    def integrand(x):\n",
+    "        return shapeFn1d(i, x, x1, x2, shapeFn) * shapeFn1d(j, x, x1, x2, shapeFn)\n",
     "\n",
-    "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
+    "    return gaussQuad1d(integrand, x1, x2, noOfIntegPt)\n",
     "\n",
     "def keij(a, c, e, i, j, xh, shapeFn, noOfIntegPt):\n",
     "    \"\"\"Computes the stiffness matrix entry K^e_ij.\"\"\"\n",
     "    x1, x2 = xh[e-1], xh[e]\n",
     "\n",
-    "    def integrand(xi):\n",
-    "        x = 0.5 * ((x2 - x1) * xi + x1 + x2)  # Transform ξ to x\n",
-    "        a_val = a(x)\n",
-    "        c_val = c(x)\n",
+    "    def integrand(x):\n",
     "        dphi_i = shapeFnDer1d(i, x, x1, x2, shapeFn)\n",
     "        dphi_j = shapeFnDer1d(j, x, x1, x2, shapeFn)\n",
     "        phi_i = shapeFn1d(i, x, x1, x2, shapeFn)\n",
     "        phi_j = shapeFn1d(j, x, x1, x2, shapeFn)\n",
     "\n",
-    "        return (a_val * dphi_i * dphi_j + c_val * phi_i * phi_j) * (x2 - x1) / 2\n",
+    "        return (a(x) * dphi_i * dphi_j + c(x) * phi_i * phi_j)\n",
     "\n",
-    "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
+    "    return gaussQuad1d(integrand, x1, x2, noOfIntegPt)\n",
     "\n",
     "def fei(a, c, f, p0, e, i, xh, shapeFn, noOfIntegPt):\n",
     "    \"\"\"Computes the load vector entry F^e_i.\"\"\"\n",
     "    x1, x2 = xh[e-1], xh[e]\n",
     "\n",
-    "    def integrand(xi):\n",
-    "        x = 0.5 * ((x2 - x1) * xi + x1 + x2)  # Transform ξ to x\n",
-    "        f_val = f(x)\n",
-    "        a_val = a(x)\n",
-    "        c_val = c(x)\n",
-    "        dphi_i = shapeFnDer1d(i, x, x1, x2, shapeFn)\n",
+    "    def integrand(x):\n",
     "        phi_i = shapeFn1d(i, x, x1, x2, shapeFn)\n",
-    "        G = p0*shapeFn1d(1,x,x1,x2,shapeFn)\n",
-    "        Gx = p0*shapeFnDer1d(1,x,x1,x2,shapeFn)\n",
-    "        return (f_val * shapeFn1d(i, x, x1, x2, shapeFn) - a_val*Gx*dphi_i - c_val*G*phi_i) * (x2 - x1) / 2\n",
+    "        dphi_i = shapeFnDer1d(i, x, x1, x2, shapeFn)\n",
+    "        G = p0*shapeFn1d(1,x,xh[0],xh[1],shapeFn)\n",
+    "        Gx = p0*shapeFnDer1d(1,x,xh[0],xh[1],shapeFn)\n",
+    "        return (f(x) * shapeFn1d(i, x, x1, x2, shapeFn) - a(x)*Gx*dphi_i - c(x)*G*phi_i)\n",
     "        \n",
-    "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
-    "    \n",
-    "    if e == 1 and i == 1:  # Adjust for Dirichlet boundary at x=0\n",
-    "        fei += p0 * a(x1) * shapeFn1d(i, x1, x1, x2, shapeFn)"
+    "    return gaussQuad1d(integrand, x1, x2, noOfIntegPt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "id": "87ff5e24",
    "metadata": {},
    "outputs": [
@@ -134,7 +123,8 @@
      "text": [
       "meij(4,1,2,xh,1,3) = 0.06666666666666668\n",
       "keij(a,c,4,1,2,xh,1,3) = -15.340000000000003\n",
-      "fei(a,c,f,p0,1,2,xh,1,3) = 3.2924848499213506\n"
+      "fei(a,c,f,p0,1,2,xh,1,3) = 3.2924848499213506\n",
+      "fei(a,c,f,p0,1,2,xh,1,3) = 0.10121663279971532\n"
      ]
     }
    ],
@@ -146,15 +136,26 @@
     "xh = np.linspace(0.,2.,6)\n",
     "print(f'meij(4,1,2,xh,1,3) = { meij(4,1,2,xh,1,3) }')\n",
     "print(f'keij(a,c,4,1,2,xh,1,3) = {keij(a,c,4,1,2,xh,1,3) }')\n",
-    "print(f'fei(a,c,f,p0,1,2,xh,1,3) = {fei(a,c,f,p0,1,2,xh,1,3)}')"
+    "print(f'fei(a,c,f,p0,1,2,xh,1,3) = {fei(a,c,f,p0,1,2,xh,1,3)}')\n",
+    "print(f'fei(a,c,f,p0,1,2,xh,1,3) = {fei(a,c,f,p0,2,1,xh,1,3)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "80ccfa68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " meij(4,3,2,xh,2,3) = 0.026666666666666672\n",
+      " keij(a,c,4,1,2,xh,2,3) = -37.32799999999999\n",
+      " fei(a,c,f,p0,1,2,xh,2,3) = 4.372766997748158\n"
+     ]
+    }
+   ],
    "source": [
     "print(f' meij(4,3,2,xh,2,3) = {meij(4,3,2,xh,2,3)}')\n",
     "print(f' keij(a,c,4,1,2,xh,2,3) = {keij(a,c,4,1,2,xh,2,3) }')\n",
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "bd5e38bc",
    "metadata": {},
    "outputs": [],
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9ae8280c",
    "metadata": {},
    "outputs": [
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "27d37248",
    "metadata": {
     "scrolled": true
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "209617cd",
    "metadata": {},
    "outputs": [],
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "6368c74d",
    "metadata": {},
    "outputs": [
@@ -377,10 +378,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "8ce02ca3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stiffK(a, c, xh, 2, 2) = \n",
+      "  (0, 0)\t8.74666666666667\n",
+      "  (0, 1)\t-6.604444444444447\n",
+      "  (1, 0)\t-6.604444444444447\n",
+      "  (1, 1)\t15.991111111111111\n",
+      "  (1, 2)\t-11.671111111111117\n",
+      "  (1, 3)\t1.7977777777777857\n",
+      "  (2, 1)\t-11.671111111111115\n",
+      "  (2, 2)\t29.08444444444449\n",
+      "  (2, 3)\t-17.253333333333373\n",
+      "  (3, 1)\t1.7977777777777857\n",
+      "  (3, 2)\t-17.253333333333373\n",
+      "  (3, 3)\t35.6266666666667\n",
+      "  (3, 4)\t-23.38666666666669\n",
+      "  (3, 5)\t3.322222222222238\n",
+      "  (4, 3)\t-23.38666666666669\n",
+      "  (4, 4)\t53.68888888888894\n",
+      "  (4, 5)\t-30.03555555555558\n",
+      "  (5, 3)\t3.322222222222238\n",
+      "  (5, 4)\t-30.03555555555558\n",
+      "  (5, 5)\t58.9955555555556\n",
+      "  (5, 6)\t-37.235555555555614\n",
+      "  (5, 7)\t5.113333333333358\n",
+      "  (6, 5)\t-37.235555555555614\n",
+      "  (6, 6)\t82.56000000000013\n",
+      "  (6, 7)\t-44.95111111111118\n",
+      "  (7, 5)\t5.113333333333358\n",
+      "  (7, 6)\t-44.95111111111119\n",
+      "  (7, 7)\t86.09777777777788\n",
+      "  (7, 8)\t-53.21777777777786\n",
+      "  (7, 9)\t7.171111111111145\n",
+      "  (8, 7)\t-53.21777777777786\n",
+      "  (8, 8)\t115.69777777777796\n",
+      "  (8, 9)\t-62.000000000000085\n",
+      "  (9, 7)\t7.171111111111145\n",
+      "  (9, 8)\t-62.000000000000085\n",
+      "  (9, 9)\t54.96222222222227\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'stiffK(a, c, xh, 2, 2) = ')\n",
     "print(f'{stiffK(a, c, xh, 2, 2)}')"
@@ -388,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "2d1d2ed1",
    "metadata": {},
    "outputs": [],
@@ -423,7 +468,7 @@
     "                    F[global_i] += local_F[i]\n",
     "        else:\n",
     "            if e == 1:\n",
-    "                for i in range (1,2):\n",
+    "                for i in range (1,3):\n",
     "                    F[i-1] = local_F[i]\n",
     "            else:\n",
     "                for i in range(shapeFn + 1):\n",
@@ -438,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "id": "ce54a24c",
    "metadata": {},
    "outputs": [
@@ -446,7 +491,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loadF(a,c,f,p0,-3,xh,1, 2) = [ -7.60629576  -9.23685804 -10.91212221 -12.64546619  40.21711654]\n"
+      "loadF(a,c,f,p0,-3,xh,1, 2) = [ 3.39370424  0.28314196  0.36787779  0.39453381 -2.80955013]\n"
      ]
     }
    ],
@@ -456,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "4b108134",
    "metadata": {},
    "outputs": [
@@ -464,8 +509,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loadF(a,c,f,p0,-3,xh,2,2) = [  4.30383266 -20.47286698  24.39151689 -46.16243908  49.75748328\n",
-      "  -9.95686053]\n"
+      "loadF(a,c,f,p0,-3,xh,2,2) = [ 4.23040347 -1.02739292  0.14956863  0.09690866  0.22289798  0.12591049\n",
+      "  0.26103663  0.13503382  0.25796334 -2.9385318 ]\n"
      ]
     }
    ],
