--- a/myFE1dibvp-Copy1.ipynb
+++ b/myFE1dibvp-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "275a6c29",
    "metadata": {},
    "outputs": [],
@@ -78,53 +78,42 @@
     "    \"\"\"Computes the mass matrix entry M^e_ij.\"\"\"\n",
     "    x1, x2 = xh[e-1], xh[e]\n",
     "    \n",
-    "    def integrand(xi):\n",
-    "        x = 0.5 * ((x2 - x1) * xi + x1 + x2)  # Transform ξ to x\n",
-    "        return shapeFn1d(i, x, x1, x2, shapeFn) * shapeFn1d(j, x, x1, x2, shapeFn) * (x2 - x1) / 2\n",
+    "    def integrand(x):\n",
+    "        return shapeFn1d(i, x, x1, x2, shapeFn) * shapeFn1d(j, x, x1, x2, shapeFn)\n",
     "\n",
-    "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
+    "    return gaussQuad1d(integrand, x1, x2, noOfIntegPt)\n",
     "\n",
     "def keij(a, c, e, i, j, xh, shapeFn, noOfIntegPt):\n",
     "    \"\"\"Computes the stiffness matrix entry K^e_ij.\"\"\"\n",
     "    x1, x2 = xh[e-1], xh[e]\n",
     "\n",
-    "    def integrand(xi):\n",
-    "        x = 0.5 * ((x2 - x1) * xi + x1 + x2)  # Transform ξ to x\n",
-    "        a_val = a(x)\n",
-    "        c_val = c(x)\n",
+    "    def integrand(x):\n",
     "        dphi_i = shapeFnDer1d(i, x, x1, x2, shapeFn)\n",
     "        dphi_j = shapeFnDer1d(j, x, x1, x2, shapeFn)\n",
     "        phi_i = shapeFn1d(i, x, x1, x2, shapeFn)\n",
     "        phi_j = shapeFn1d(j, x, x1, x2, shapeFn)\n",
     "\n",
-    "        return (a_val * dphi_i * dphi_j + c_val * phi_i * phi_j) * (x2 - x1) / 2\n",
+    "        return (a(x) * dphi_i * dphi_j + c(x) * phi_i * phi_j)\n",
     "\n",
-    "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
+    "    return gaussQuad1d(integrand, x1, x2, noOfIntegPt)\n",
     "\n",
     "def fei(a, c, f, p0, e, i, xh, shapeFn, noOfIntegPt, t):\n",
     "    \"\"\"Computes the load vector entry F^e_i.\"\"\"\n",
     "    x1, x2 = xh[e-1], xh[e]\n",
     "\n",
-    "    def integrand(xi):\n",
-    "        x = 0.5 * ((x2 - x1) * xi + x1 + x2)  # Transform ξ to x\n",
-    "        f_val = f(x,t)\n",
-    "        a_val = a(x)\n",
-    "        c_val = c(x)\n",
-    "        dphi_i = shapeFnDer1d(i, x, x1, x2, shapeFn)\n",
+    "    def integrand(x):\n",
     "        phi_i = shapeFn1d(i, x, x1, x2, shapeFn)\n",
-    "        G = p0*shapeFn1d(1,x,x1,x2,shapeFn)\n",
-    "        Gx = p0*shapeFnDer1d(1,x,x1,x2,shapeFn)\n",
-    "        return (f_val * shapeFn1d(i, x, x1, x2, shapeFn) - a_val*Gx*dphi_i - c_val*G*phi_i) * (x2 - x1) / 2\n",
-    "\n",
-    "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
-    "    \n",
-    "    if e == 1 and i == 1:  # Adjust for Dirichlet boundary at x=0\n",
-    "        fei -= p0 * a(x1) * shapeFn1d(i, x1, x1, x2, shapeFn)"
+    "        dphi_i = shapeFnDer1d(i, x, x1, x2, shapeFn)\n",
+    "        G = p0*shapeFn1d(1,x,xh[0],xh[1],shapeFn)\n",
+    "        Gx = p0*shapeFnDer1d(1,x,xh[0],xh[1],shapeFn)\n",
+    "        return (f(x,t) * shapeFn1d(i, x, x1, x2, shapeFn) - a(x)*Gx*dphi_i - c(x)*G*phi_i)\n",
+    "        \n",
+    "    return gaussQuad1d(integrand, x1, x2, noOfIntegPt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "4c6527cc",
    "metadata": {},
    "outputs": [],
@@ -178,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "3f5fec5b",
    "metadata": {},
    "outputs": [],
@@ -232,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "e194f270",
    "metadata": {},
    "outputs": [],
@@ -285,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "4c4c58c7",
    "metadata": {},
    "outputs": [],
@@ -393,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4b6e26f",
+   "id": "79739f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,41 +396,43 @@
     "import numpy as np\n",
     "# linear and quadratic 1D shape functions\n",
     "def shapeFn1d(i:int,x:np.array,x1:np.array,x2:np.array,p:int):\n",
+    "    '''\n",
+    "    these are the linear and quadratic shape functions on a 1-d element [x1,x2]\n",
+    "    y = shapeFn1d(i,x,x1,x2,p)\n",
+    "    input:\n",
+    "    i: i-th shape function\n",
+    "    x: input for shape function\n",
+    "    x1, x2: end points for the 1d element, x1 < x2\n",
+    "    p: order of shape function\n",
+    "    output:\n",
+    "    y: the shapeFn(x)\n",
+    "    '''\n",
+    "    if (np.ndim(x) == 0):\n",
+    "    #print('x is a scalar')\n",
+    "    x = np.array([x])\n",
+    "    if (np.ndim(x1) == 0):\n",
+    "    #print('x1 is a scalar')\n",
+    "    x1 = np.array([x1])\n",
+    "    if (np.ndim(x2) == 0):\n",
+    "    #print('x2 is a scalar')\n",
+    "    x2 = np.array([x2])\n",
+    "    ind = np.where((x < x2+1e-12) & (x > x1-1e-12))[0]\n",
+    "    y = np.zeros(x.shape)\n",
+    "    # linear shape functions\n",
+    "    if (p == 1):\n",
+    "    if (i == 1):\n",
+    "    y[ind] = (x2[ind] - x[ind])/(x2[ind] - x1[ind])\n",
+    "    elif (i == 2):\n",
+    "    y[ind] = (x[ind] - x1[ind])/(x2[ind] - x1[ind])\n",
+    "    else:\n",
+    "    y = np.array([])\n",
+    "    # quadratic shape functions\n",
+    "    if (p == 2):\n",
+    "    if (i == 1):\n",
+    "    y[ind] = (x2[ind] - x[ind])*(x2[ind]-2*x[ind]+x1[ind])/((x2[ind]-\n",
+    "    x1[ind])**2)\n",
+    "\n",
     "'''\n",
-    "these are the linear and quadratic shape functions on a 1-d element [x1,x2]\n",
-    "y = shapeFn1d(i,x,x1,x2,p)\n",
-    "input:\n",
-    "i: i-th shape function\n",
-    "x: input for shape function\n",
-    "x1, x2: end points for the 1d element, x1 < x2\n",
-    "p: order of shape function\n",
-    "output:\n",
-    "y: the shapeFn(x)\n",
-    "'''\n",
-    "if (np.ndim(x) == 0):\n",
-    "#print('x is a scalar')\n",
-    "x = np.array([x])\n",
-    "if (np.ndim(x1) == 0):\n",
-    "#print('x1 is a scalar')\n",
-    "x1 = np.array([x1])\n",
-    "if (np.ndim(x2) == 0):\n",
-    "#print('x2 is a scalar')\n",
-    "x2 = np.array([x2])\n",
-    "ind = np.where((x < x2+1e-12) & (x > x1-1e-12))[0]\n",
-    "y = np.zeros(x.shape)\n",
-    "# linear shape functions\n",
-    "if (p == 1):\n",
-    "if (i == 1):\n",
-    "y[ind] = (x2[ind] - x[ind])/(x2[ind] - x1[ind])\n",
-    "elif (i == 2):\n",
-    "y[ind] = (x[ind] - x1[ind])/(x2[ind] - x1[ind])\n",
-    "else:\n",
-    "y = np.array([])\n",
-    "# quadratic shape functions\n",
-    "if (p == 2):\n",
-    "if (i == 1):\n",
-    "y[ind] = (x2[ind] - x[ind])*(x2[ind]-2*x[ind]+x1[ind])/((x2[ind]-\n",
-    "x1[ind])**2)'''\n",
     "This module has the 1D shape functions\n",
     "functions included:\n",
     "y = shapeFn1d(i:int,x:np.array,x1:np.array,x2:np.array,p:int)\n",
@@ -548,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f69d34f9",
+   "id": "f00b4370",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 11,
    "id": "9e4eb752",
    "metadata": {},
    "outputs": [],
@@ -691,13 +682,12 @@
     "    Ft = loadF(a, c, f, p0, QL, xh, shapeFn, 3)\n",
     "    uh = crank_nicolson_solver(M, K, Ft, u0, xh, T, dt, QL, p0, shapeFn)\n",
     "    \n",
-    "    return uh\n",
-    "    "
+    "    return uh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 13,
    "id": "a3f6d44c",
    "metadata": {},
    "outputs": [
@@ -705,7 +695,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uh(x) = [0.0921 0.4264 0.0694 0.    ]\n"
+      "uh(x) = [0.0706 0.1952 0.053  0.    ]\n"
      ]
     }
    ],
@@ -722,7 +712,7 @@
     "u0 = lambda x: np.sin(x)\n",
     "dt = 0.1\n",
     "shapeFn = 1\n",
-    "noOfEle = 128\n",
+    "noOfEle = 4\n",
     "uh = myFE1dibvp(a, c, f, p0, QL, u0, L, T, dt, noOfEle, shapeFn)\n",
     "np.set_printoptions(precision=4)\n",
     "#print(f'W = {W}')\n",
@@ -731,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 14,
    "id": "a3a3ac51",
    "metadata": {},
    "outputs": [
@@ -739,7 +729,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uh(x) = [0.4275 0.     0.     0.1845]\n"
+      "uh(x) = [0.372  0.     0.     0.1393]\n"
      ]
     }
    ],
@@ -754,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 15,
    "id": "4cb71e6d",
    "metadata": {},
    "outputs": [],
@@ -795,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 17,
    "id": "f6d91457",
    "metadata": {},
    "outputs": [
@@ -806,8 +796,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[202], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x_vals, true_soln(x_vals,\u001b[38;5;241m1\u001b[39m), label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrue solution\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x_vals, \u001b[43mlin_uh16\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_vals\u001b[49m\u001b[43m)\u001b[49m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m16 elements\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x_vals, lin_uh32[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m](x_vals), label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m32 elements\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x_vals, lin_uh64[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m](x_vals), label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m64 elements\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[197], line 33\u001b[0m, in \u001b[0;36mcrank_nicolson_solver.<locals>.uh_func.<locals>.uh\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     31\u001b[0m             phi1 \u001b[38;5;241m=\u001b[39m (x2 \u001b[38;5;241m-\u001b[39m xi) \u001b[38;5;241m/\u001b[39m (x2 \u001b[38;5;241m-\u001b[39m x1)\n\u001b[0;32m     32\u001b[0m             phi2 \u001b[38;5;241m=\u001b[39m (xi \u001b[38;5;241m-\u001b[39m x1) \u001b[38;5;241m/\u001b[39m (x2 \u001b[38;5;241m-\u001b[39m x1)\n\u001b[1;32m---> 33\u001b[0m             vals[i] \u001b[38;5;241m=\u001b[39m W[e] \u001b[38;5;241m*\u001b[39m phi1 \u001b[38;5;241m+\u001b[39m \u001b[43mW\u001b[49m\u001b[43m[\u001b[49m\u001b[43me\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m*\u001b[39m phi2\n\u001b[0;32m     34\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m vals \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(vals) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m vals[\u001b[38;5;241m0\u001b[39m]\n",
+      "Cell \u001b[1;32mIn[17], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x_vals, true_soln(x_vals,\u001b[38;5;241m1\u001b[39m), label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrue solution\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x_vals, \u001b[43mlin_uh16\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_vals\u001b[49m\u001b[43m)\u001b[49m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m16 elements\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x_vals, lin_uh32[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m](x_vals), label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m32 elements\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x_vals, lin_uh64[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m](x_vals), label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m64 elements\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[10], line 33\u001b[0m, in \u001b[0;36mcrank_nicolson_solver.<locals>.uh_func.<locals>.uh\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     31\u001b[0m             phi1 \u001b[38;5;241m=\u001b[39m (x2 \u001b[38;5;241m-\u001b[39m xi) \u001b[38;5;241m/\u001b[39m (x2 \u001b[38;5;241m-\u001b[39m x1)\n\u001b[0;32m     32\u001b[0m             phi2 \u001b[38;5;241m=\u001b[39m (xi \u001b[38;5;241m-\u001b[39m x1) \u001b[38;5;241m/\u001b[39m (x2 \u001b[38;5;241m-\u001b[39m x1)\n\u001b[1;32m---> 33\u001b[0m             vals[i] \u001b[38;5;241m=\u001b[39m W[e] \u001b[38;5;241m*\u001b[39m phi1 \u001b[38;5;241m+\u001b[39m \u001b[43mW\u001b[49m\u001b[43m[\u001b[49m\u001b[43me\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m*\u001b[39m phi2\n\u001b[0;32m     34\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m vals \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(vals) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m vals[\u001b[38;5;241m0\u001b[39m]\n",
       "\u001b[1;31mIndexError\u001b[0m: index 16 is out of bounds for axis 0 with size 16"
      ]
     },
@@ -823,6 +813,8 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.plot(x_vals, true_soln(x_vals,1), label='true solution')\n",
     "plt.plot(x_vals, lin_uh16[-1](x_vals), label='16 elements')\n",
     "plt.plot(x_vals, lin_uh32[-1](x_vals), label='32 elements')\n",
