--- a/math520hw7.ipynb
+++ b/math520hw7.ipynb
@@ -165,8 +165,8 @@
     "    # Set up triangles matrix, accounting for the first node being 1 NOT 0\n",
     "    triangles = Delaunay(nodes).simplices + np.ones_like(Delaunay(nodes).simplices)\n",
     "    \n",
-    "    # Initialize edges matrix\n",
-    "    edges = np.zeros((3*len(nodes), 2))\n",
+    "    # Initialize edges matrix, 3 edges for each triangle in the mesh\n",
+    "    edges = np.zeros((3*len(triangles), 2))\n",
     "    for i in range(len(triangles)):\n",
     "        edges[3*i, :] = np.array([triangles[i,0], triangles[i,1]])\n",
     "        edges[3*i + 1, :] = np.array([triangles[i,0], triangles[i,2]])\n",
@@ -206,8 +206,7 @@
       " [6 4 5]\n",
       " [6 8 9]\n",
       " [8 6 7]]\n",
-      "edges = [[1. 2.]\n",
-      " [1. 8.]\n",
+      "edges = [[1. 8.]\n",
       " [2. 3.]\n",
       " [2. 4.]\n",
       " [2. 8.]\n",
@@ -222,8 +221,8 @@
       " [6. 9.]\n",
       " [7. 8.]\n",
       " [8. 9.]]\n",
-      "bdyEdges = [ True  True  True False False False  True  True False False  True  True\n",
-      " False False  True False]\n"
+      "bdyEdges = [ True  True False False False  True  True False False  True  True False\n",
+      " False  True False]\n"
      ]
     }
    ],
