--- a/math520hw7p3.ipynb
+++ b/math520hw7p3.ipynb
@@ -58,7 +58,7 @@
     "        s = 0.5*(a + b + c)\n",
     "        \n",
     "        # Define the paraeters used for the measure of quality\n",
-    "        dT = 2*np.sqrt(((s - a)*(s - b)*(s - c))/2)\n",
+    "        dT = 2*np.sqrt(((s - a)*(s - b)*(s - c))/s)\n",
     "        diamT = max(a, b, c)\n",
     "        \n",
     "        q1[i] = (np.sqrt(3)*dT)/diamT\n",
@@ -369,10 +369,10 @@
      "output_type": "stream",
      "text": [
       " q1 = \n",
-      "[0.69476168 0.86255547 0.86255547 0.69476168 0.69476168 0.78080457\n",
-      " 0.78080457]\n",
+      "[0.6698715  0.85909944 0.85909944 0.6698715  0.6698715  0.70396985\n",
+      " 0.70396985]\n",
       "\n",
-      "min q1(T) = 0.6947616780324498\n",
+      "min q1(T) = 0.66987149950743\n",
       "\n",
       "edge lengths = \n",
       " [1.         1.80277564 1.41421356 1.5        1.41421356 1.11803399\n",
