created assignment 9 + other stuff
created assignment 9 and have changes to project 1 file, still trying to fix/complete. Assignment 6 wasn't actually editted.

--- a/math520hw6.ipynb
+++ b/math520hw6.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "2d1d2ed1",
    "metadata": {},
    "outputs": [],
@@ -469,20 +469,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "ce54a24c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-3.2669026  3.2925078]\n",
-      "[0.10119644 0.12315651]\n",
-      "[0.15998545 0.17436151]\n",
-      "[0.19351628 0.19803867]\n",
-      "[0.19649514 0.19044987]\n",
-      "loadF(a,c,f,p0,-3,xh,1, 2) = [ 3.39370424  0.28314196  0.36787779  0.39453381 -2.80955013]\n"
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mloadF(a,c,f,p0,-3,xh,1, 2) = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloadF(a,\u001b[38;5;250m \u001b[39mc,\u001b[38;5;250m \u001b[39mf,\u001b[38;5;250m \u001b[39mp0,\u001b[38;5;250m \u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3\u001b[39m,\u001b[38;5;250m \u001b[39mxh,\u001b[38;5;250m \u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
      ]
     }
    ],
