--- a/myFE1dibvp.ipynb
+++ b/myFE1dibvp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "275a6c29",
    "metadata": {},
    "outputs": [],
@@ -78,53 +78,42 @@
     "    \"\"\"Computes the mass matrix entry M^e_ij.\"\"\"\n",
     "    x1, x2 = xh[e-1], xh[e]\n",
     "    \n",
-    "    def integrand(xi):\n",
-    "        x = 0.5 * ((x2 - x1) * xi + x1 + x2)  # Transform ξ to x\n",
-    "        return shapeFn1d(i, x, x1, x2, shapeFn) * shapeFn1d(j, x, x1, x2, shapeFn) * (x2 - x1) / 2\n",
+    "    def integrand(x):\n",
+    "        return shapeFn1d(i, x, x1, x2, shapeFn) * shapeFn1d(j, x, x1, x2, shapeFn)\n",
     "\n",
-    "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
+    "    return gaussQuad1d(integrand, x1, x2, noOfIntegPt)\n",
     "\n",
     "def keij(a, c, e, i, j, xh, shapeFn, noOfIntegPt):\n",
     "    \"\"\"Computes the stiffness matrix entry K^e_ij.\"\"\"\n",
     "    x1, x2 = xh[e-1], xh[e]\n",
     "\n",
-    "    def integrand(xi):\n",
-    "        x = 0.5 * ((x2 - x1) * xi + x1 + x2)  # Transform ξ to x\n",
-    "        a_val = a(x)\n",
-    "        c_val = c(x)\n",
+    "    def integrand(x):\n",
     "        dphi_i = shapeFnDer1d(i, x, x1, x2, shapeFn)\n",
     "        dphi_j = shapeFnDer1d(j, x, x1, x2, shapeFn)\n",
     "        phi_i = shapeFn1d(i, x, x1, x2, shapeFn)\n",
     "        phi_j = shapeFn1d(j, x, x1, x2, shapeFn)\n",
     "\n",
-    "        return (a_val * dphi_i * dphi_j + c_val * phi_i * phi_j) * (x2 - x1) / 2\n",
+    "        return (a(x) * dphi_i * dphi_j + c(x) * phi_i * phi_j)\n",
     "\n",
-    "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
+    "    return gaussQuad1d(integrand, x1, x2, noOfIntegPt)\n",
     "\n",
-    "def fei(a, c, f, p0, e, i, xh, shapeFn, noOfIntegPt, t):\n",
+    "def fei(a, c, f, p0, e, i, xh, shapeFn, noOfIntegPt):\n",
     "    \"\"\"Computes the load vector entry F^e_i.\"\"\"\n",
     "    x1, x2 = xh[e-1], xh[e]\n",
     "\n",
-    "    def integrand(xi):\n",
-    "        x = 0.5 * ((x2 - x1) * xi + x1 + x2)  # Transform ξ to x\n",
-    "        f_val = f(x,t)\n",
-    "        a_val = a(x)\n",
-    "        c_val = c(x)\n",
-    "        dphi_i = shapeFnDer1d(i, x, x1, x2, shapeFn)\n",
+    "    def integrand(x):\n",
     "        phi_i = shapeFn1d(i, x, x1, x2, shapeFn)\n",
-    "        G = p0*shapeFn1d(1,x,x1,x2,shapeFn)\n",
-    "        Gx = p0*shapeFnDer1d(1,x,x1,x2,shapeFn)\n",
-    "        return (f_val * shapeFn1d(i, x, x1, x2, shapeFn) - a_val*Gx*dphi_i - c_val*G*phi_i) * (x2 - x1) / 2\n",
-    "\n",
-    "    return gaussQuadStd1d(integrand, noOfIntegPt)\n",
-    "    \n",
-    "    if e == 1 and i == 1:  # Adjust for Dirichlet boundary at x=0\n",
-    "        fei -= p0 * a(x1) * shapeFn1d(i, x1, x1, x2, shapeFn)"
+    "        dphi_i = shapeFnDer1d(i, x, x1, x2, shapeFn)\n",
+    "        G = p0*shapeFn1d(1,x,xh[0],xh[1],shapeFn)\n",
+    "        Gx = p0*shapeFnDer1d(1,x,xh[0],xh[1],shapeFn)\n",
+    "        return (f(x,t) * shapeFn1d(i, x, x1, x2, shapeFn) - a(x)*Gx*dphi_i - c(x)*G*phi_i)\n",
+    "        \n",
+    "    return gaussQuad1d(integrand, x1, x2, noOfIntegPt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "4c6527cc",
    "metadata": {},
    "outputs": [],
@@ -178,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3f5fec5b",
    "metadata": {},
    "outputs": [],
@@ -232,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "e194f270",
    "metadata": {},
    "outputs": [],
@@ -243,48 +232,49 @@
     "    \n",
     "    n_elem = len(xh) - 1  # Number of elements\n",
     "    n_nodes = n_elem * shapeFn  # Total nodes based on shape function order\n",
+    "    \n",
+    "    def F_func(t):\n",
+    "        # Initialize global load vector\n",
+    "        F = np.zeros(n_nodes)\n",
     "\n",
-    "    # Initialize global load vector\n",
-    "    F = np.zeros(n_nodes)\n",
+    "        # Loop over elements\n",
+    "        for e in range(1, n_elem + 1):\n",
+    "            x1, x2 = xh[e-1], xh[e]  # Element endpoints\n",
     "\n",
-    "    # Loop over elements\n",
-    "    for e in range(1, n_elem + 1):\n",
-    "        x1, x2 = xh[e-1], xh[e]  # Element endpoints\n",
-    "        \n",
-    "        # Local load vector\n",
-    "        local_F = np.zeros(shapeFn + 1)\n",
+    "            # Local load vector\n",
+    "            local_F = np.zeros(shapeFn + 1)\n",
     "\n",
-    "        for i in range(1, shapeFn + 2):\n",
-    "            local_F[i-1] = fei(a, c, f, p0, e, i, xh, shapeFn, noOfIntegPt)\n",
-    "            \n",
-    "        print(local_F)\n",
+    "            for i in range(1, shapeFn + 2):\n",
+    "                local_F[i-1] = fei(a, c, f, p0, e, i, xh, shapeFn, noOfIntegPt)\n",
     "\n",
-    "        # Assemble local contributions into global load vector\n",
-    "        if shapeFn == 1:\n",
-    "            if e == 1:\n",
-    "                F[0] = local_F[-1]\n",
+    "            print(local_F)\n",
+    "\n",
+    "            # Assemble local contributions into global load vector\n",
+    "            if shapeFn == 1:\n",
+    "                if e == 1:\n",
+    "                    F[0] = local_F[-1]\n",
+    "                else:\n",
+    "                    for i in range(shapeFn + 1):\n",
+    "                        global_i = e - 2 + i\n",
+    "                        F[global_i] += local_F[i]\n",
     "            else:\n",
-    "                for i in range(shapeFn + 1):\n",
-    "                    global_i = e - 2 + i\n",
-    "                    F[global_i] += local_F[i]\n",
-    "        else:\n",
-    "            if e == 1:\n",
-    "                for i in range (1,3):\n",
-    "                    F[i-1] = local_F[i]\n",
-    "            else:\n",
-    "                for i in range(shapeFn + 1):\n",
-    "                    global_i = 2*e - 3 + i\n",
-    "                    F[global_i] += local_F[i]\n",
+    "                if e == 1:\n",
+    "                    for i in range (1,3):\n",
+    "                        F[i-1] = local_F[i]\n",
+    "                else:\n",
+    "                    for i in range(shapeFn + 1):\n",
+    "                        global_i = 2*e - 3 + i\n",
+    "                        F[global_i] += local_F[i]\n",
     "\n",
-    "    # Apply Neumann boundary condition at x = L\n",
-    "    F[-1] += QL\n",
-    "\n",
-    "    return F"
+    "        # Apply Neumann boundary condition at x = L\n",
+    "        F[-1] += QL(t)\n",
+    "        return F\n",
+    "    return F_func\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4c4c58c7",
    "metadata": {},
    "outputs": [],
@@ -391,7 +381,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "id": "41593fd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This file contains functions that assemble calculated node values\n",
+    "# from a 1D FEM menthod to approximated solution\n",
+    "#\n",
+    "#\n",
+    "# Last update: Chung-min Lee March 15, 2025\n",
+    "\n",
+    "import numpy as np\n",
+    "!!!!! NOTE THAT YOU NEED TO IMPORT SHAPEFNS !!!!\n",
+    "\n",
+    "##--------------------------------------------------\n",
+    "# assemble solution on the nodes and give the solution function\n",
+    "##--------------------------------------------------\n",
+    "def approxSol(w: np.array, p0: float, xh: np.array, shapeFn:int):\n",
+    "    '''\n",
+    "        This function takes the solution of the values of the nodes and gives the\n",
+    "        approximated solution on the interval [0,L]\n",
+    "        [uh] = approxSol(w, u0, xh, shapeFn)\n",
+    "        where\n",
+    "            w is the values of the nodes excluding the node value at x=0,\n",
+    "            p0 is the Dirichlet BC at x = 0,\n",
+    "            xh = [x_1,x_2,...,x_{n+1}] is the list of endpoints of all elements,\n",
+    "            shapeFn indicates the choice of linear (use 1) or quadratic (use 2) shape\n",
+    "            functions\n",
+    "    '''\n",
+    "    w = np.hstack((p0, w))\n",
+    "    if (shapeFn == 1): # if linear shape functions are used\n",
+    "        uh = lambda x: linearApprox(x,w,xh)\n",
+    "    else: # if quadratic shape functions are used\n",
+    "        uh = lambda x: quadraticApprox(x,w,xh)\n",
+    "    return uh\n",
+    "\n",
+    "##--------------------------------------------------\n",
+    "# assemble linear shape functions on the whole domain\n",
+    "##-------------------------------------------------\n",
+    "def linearApprox(x: np.array, v: np.array,xh: np.array):\n",
+    "    if (np.ndim(x) == 0):\n",
+    "        #print('x is a scalar')\n",
+    "        x = np.array([x])\n",
+    "    \n",
+    "    # declare the output array\n",
+    "    y = np.zeros(len(x))\n",
+    "    \n",
+    "    # mesh size\n",
+    "    h = xh[1]-xh[0]\n",
+    "    \n",
+    "    # determine which subinterval x belongs to\n",
+    "    ind = np.floor(x/h).astype(int)\n",
+    "    x1 = h * ind\n",
+    "    x2 = x1 + h\n",
+    "    ind = ind+1\n",
+    "    \n",
+    "    # the right end point x=L\n",
+    "    indLastPt = np.where(ind == len(v))[0]\n",
+    "    y[indLastPt] = v[-1]\n",
+    "    indNotLastPt = np.where(ind < len(v))[0]\n",
+    "    y[indNotLastPt] = v[ind[indNotLastPt]-1] * shapeFn1d(1,x[indNotLastPt],x1[indNotLastPt],x2[indNotLastPt],1) + \\\n",
+    "    v[ind[indNotLastPt]] * shapeFn1d(2,x[indNotLastPt],x1[indNotLastPt],x2[indNotLastPt],1)\n",
+    "    return y\n",
+    "\n",
+    "##--------------------------------------------------\n",
+    "# assemble quadratic shape functions on the whole domain\n",
+    "##-------------------------------------------------\n",
+    "def quadraticApprox(x: np.array,v: np.array,xh: np.array):\n",
+    "    if (np.ndim(x) == 0):\n",
+    "        #print('x is a scalar')\n",
+    "        x = np.array([x])\n",
+    "    \n",
+    "    # declare the output array\n",
+    "    y = np.zeros(len(x))\n",
+    "    \n",
+    "    # mesh size\n",
+    "    h = xh[1]-xh[0]\n",
+    "    \n",
+    "    # determine which subinterval x belongs to\n",
+    "    ind = np.floor(x/h).astype(int)\n",
+    "    x1 = ind*h\n",
+    "    x2 = x1+h\n",
+    "    ind = ind+1\n",
+    "    \n",
+    "    # the right end point x=L\n",
+    "    indLastPt = np.where(ind == (len(v)+1)/2)[0]\n",
+    "    y[indLastPt] = v[-1]\n",
+    "    indNotLastPt = np.where(ind < (len(v)+1)/2)[0]\n",
+    "    y[indNotLastPt] = v[2*ind[indNotLastPt]-2] * shapeFn1d(1,x[indNotLastPt],x1[indNotLastPt],x2[indNotLastPt],2)\\\n",
+    "    + v[2*ind[indNotLastPt]-1] * shapeFn1d(2,x[indNotLastPt],x1[indNotLastPt],x2[indNotLastPt],2) \\\n",
+    "    + v[2*ind[indNotLastPt]] * shapeFn1d(3,x[indNotLastPt],x1[indNotLastPt],x2[indNotLastPt],2)\n",
+    "    return y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "9e4eb752",
    "metadata": {},
    "outputs": [],
@@ -401,29 +487,75 @@
     "    M = massM(xh, shapeFn, 3)\n",
     "    K = stiffK(a, c, xh, shapeFn, 3)\n",
     "    Ft = loadF(a, c, f, p0, QL, xh, shapeFn, 3)\n",
-    "    uh = crank_nicolson_solver(M, K, Ft, u0, xh, T, dt, QL, p0, shapeFn)\n",
     "    \n",
-    "    return uh\n",
+    "    def uh_func(W):\n",
+    "        def uh(x):\n",
+    "            x = np.atleast_1d(x)\n",
+    "            vals = np.zeros_like(x)\n",
+    "            for i, xi in enumerate(x):\n",
+    "                for e in range(n_elem):\n",
+    "                    if xh[e] <= xi <= xh[e + 1]:\n",
+    "                        x1, x2 = xh[e], xh[e + 1]\n",
+    "                        phi1 = (x2 - xi) / (x2 - x1)\n",
+    "                        phi2 = (xi - x1) / (x2 - x1)\n",
+    "                        vals[i] = W[e] * phi1 + W[e + 1] * phi2\n",
+    "                        break\n",
+    "            return vals if len(vals) > 1 else vals[0]\n",
+    "\n",
+    "        return uh\n",
+    "    \n",
+    "    n_elem = len(xh) - 1\n",
+    "    time_steps = int(T / dt)\n",
+    "    uh_list = []\n",
+    "\n",
+    "    # Reconstruct global node coordinates to evaluate u0 properly\n",
+    "    if shapeFn == 1:\n",
+    "        # Linear — just linearly spaced nodes\n",
+    "        x_nodes = np.array(xh[0:-1])\n",
+    "    elif shapeFn == 2:\n",
+    "        # Quadratic — midpoints in addition to endpoints\n",
+    "        x_nodes = []\n",
+    "        for i in range(len(xh) - 1):\n",
+    "            x1, x2 = xh[i], xh[i+1]\n",
+    "            x_nodes.extend([x1, (x1 + x2)/2])\n",
+    "        #x_nodes.append(xh[-1])  # last node\n",
+    "        x_nodes = np.array(x_nodes)\n",
+    "        #print(x_nodes)\n",
+    "    else:\n",
+    "        raise ValueError(\"Unsupported shape function order.\")\n",
+    "\n",
+    "    # Initial condition vector\n",
+    "    Wn = np.array([u0(x) for x in x_nodes])\n",
+    "    \n",
+    "    uh = approxSol(Wn, p0, xh, shapeFn)\n",
+    "    #uh = crank_nicolson_solver(M, K, Ft, u0, xh, T, dt, QL, p0, shapeFn)\n",
+    "    \n",
+    "    return uh, Wn\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "a3f6d44c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W = [0.     0.4794 0.8415 0.9975]\n"
+     ]
+    },
+    {
      "ename": "TypeError",
-     "evalue": "fei() missing 1 required positional argument: 't'",
+     "evalue": "'function' object is not subscriptable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m shapeFn \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     13\u001b[0m noOfEle \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m128\u001b[39m\n\u001b[1;32m---> 14\u001b[0m uh \u001b[38;5;241m=\u001b[39m \u001b[43mmyFE1dibvp\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQL\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mu0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mL\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnoOfEle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshapeFn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m np\u001b[38;5;241m.\u001b[39mset_printoptions(precision\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m#print(f'W = {W}')\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[6], line 5\u001b[0m, in \u001b[0;36mmyFE1dibvp\u001b[1;34m(a, c, f, p0, QL, u0, L, T, dt, noOfEle, shapeFn)\u001b[0m\n\u001b[0;32m      3\u001b[0m M \u001b[38;5;241m=\u001b[39m massM(xh, shapeFn, \u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m      4\u001b[0m K \u001b[38;5;241m=\u001b[39m stiffK(a, c, xh, shapeFn, \u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m Ft \u001b[38;5;241m=\u001b[39m \u001b[43mloadF\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQL\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mxh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshapeFn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m uh \u001b[38;5;241m=\u001b[39m crank_nicolson_solver(M, K, Ft, u0, xh, T, dt, QL, p0, shapeFn)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m uh\n",
-      "Cell \u001b[1;32mIn[4], line 19\u001b[0m, in \u001b[0;36mloadF\u001b[1;34m(a, c, f, p0, QL, xh, shapeFn, noOfIntegPt)\u001b[0m\n\u001b[0;32m     16\u001b[0m local_F \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(shapeFn \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, shapeFn \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m2\u001b[39m):\n\u001b[1;32m---> 19\u001b[0m     local_F[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mfei\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43me\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mxh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshapeFn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnoOfIntegPt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(local_F)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Assemble local contributions into global load vector\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: fei() missing 1 required positional argument: 't'"
+      "Cell \u001b[1;32mIn[20], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m np\u001b[38;5;241m.\u001b[39mset_printoptions(precision\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mW = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mW\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muh(x) = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00muh[\u001b[38;5;241m5\u001b[39m](np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0.2\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;241m1.37\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;241m0.15\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;241m2.22\u001b[39m]))\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'function' object is not subscriptable"
      ]
     }
    ],
@@ -440,11 +572,11 @@
     "u0 = lambda x: np.sin(x)\n",
     "dt = 0.1\n",
     "shapeFn = 1\n",
-    "noOfEle = 128\n",
-    "uh = myFE1dibvp(a, c, f, p0, QL, u0, L, T, dt, noOfEle, shapeFn)\n",
+    "noOfEle = 4\n",
+    "uh,W = myFE1dibvp(a, c, f, p0, QL, u0, L, T, dt, noOfEle, shapeFn)\n",
     "np.set_printoptions(precision=4)\n",
-    "#print(f'W = {W}')\n",
-    "print(f'uh(x) = {uh[-1] (np.array([0.2, 1.37, 0.15, 2.22]))}') "
+    "print(f'W = {W}')\n",
+    "print(f'uh(x) = {uh[5](np.array([0.2, 1.37, 0.15, 2.22]))}') "
    ]
   },
   {
