more fixes to Assignment 9
continued to correct Assignment 9 but there are still errors. Addressed fei2d, outputs are really close to sample results but need to check if it is acceptable. If so, then the error is in loadf2d

--- a/math520hw9.ipynb
+++ b/math520hw9.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7e345b22",
+   "id": "3837b777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d3bcd251",
+   "id": "f593badf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,8 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "42be255d",
+   "execution_count": 52,
+   "id": "beeefc78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
     "    if shapeFn == 1:\n",
     "        verts = np.array([x1, x2, x3])\n",
     "    elif shapeFn == 2:\n",
-    "        mid_ids = triangleMidPts[e - 1] - (len(nodes) + 1) # midpoint node in python indexing (0-based)\n",
+    "        mid_ids = triangleMidPts[e - 1] - (len(nodes) + 1) # midpoint node id in python indexing (0-based)\n",
     "        mids = np.array([midNodes[mid_ids[0]],\n",
     "                         midNodes[mid_ids[1]],\n",
     "                         midNodes[mid_ids[2]]])\n",
@@ -376,15 +376,17 @@
     "        node_ids = np.hstack([tri, triangleMidPts[e - 1] - 1])\n",
     "        \n",
     "    for j in range(len(node_ids)):\n",
-    "        def integrand_g(x, y):\n",
+    "        def integrand_gamma1(x, y):\n",
     "                grad_psi_i = shapeFnGrad2d(i, x, y, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], shapeFn)\n",
     "                grad_psi_j = shapeFnGrad2d(j+1, x, y, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], shapeFn)\n",
     "                return k(x, y) * np.dot(grad_psi_j, grad_psi_i)\n",
     "\n",
     "        if (node_ids[j] <= len(nodes) -1 and Gamma1Nodes[node_ids[j]]):\n",
-    "            z -= g(verts[j,0],verts[j,1]) * quad2dTri(integrand_g, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], noOfIntegPt)\n",
+    "            z -= g(verts[j, 0],verts[j, 1]) * quad2dTri(integrand_gamma1, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], noOfIntegPt)\n",
     "        elif (node_ids[j] >= len(nodes) and Gamma1MidNodes[node_ids[j] - len(nodes)]):\n",
-    "            z -= g(verts[j,0],verts[j,1]) * quad2dTri(integrand_g, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], noOfIntegPt)\n",
+    "            z -= g(verts[j, 0],verts[j, 1]) * quad2dTri(integrand_gamma1, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], noOfIntegPt)\n",
+    "        else:\n",
+    "            z -= 0\n",
     "\n",
     "    # Now handle Neumann boundary (Γ2)\n",
     "    if shapeFn == 1:\n",
@@ -402,10 +404,10 @@
     "            # For quadratic, edge is (node1, midnode, node2)\n",
     "            if shapeFn == 1:\n",
     "                a, b = nodes[edge[0]], nodes[edge[1]]\n",
-    "                def boundary_integrand(s):\n",
+    "                def integrand_gamma2(s):\n",
     "                    x, y = (1 - s) * a + s * b\n",
     "                    return h(x, y) * shapeFn2d(i, x, y, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], shapeFn)\n",
-    "                z += gaussQuad1d(boundary_integrand, 0, 1, noOfIntegPt1d) * np.linalg.norm(b - a)\n",
+    "                z += gaussQuad1d(integrand_gamma2, 0, 1, noOfIntegPt1d) * np.linalg.norm(b - a)\n",
     "            elif shapeFn == 2:\n",
     "                a = nodes[edge[0]]\n",
     "                b = midNodes[edge[1] - (len(nodes) + 1)]\n",
@@ -418,14 +420,16 @@
     "                    return h(x, y) * shapeFn2d(i, x, y, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], shapeFn)\n",
     "                z += gaussQuad1d(boundary_integrand_ab, 0, 1, noOfIntegPt1d) * np.linalg.norm(b - a)\n",
     "                z += gaussQuad1d(boundary_integrand_bc, 0, 1, noOfIntegPt1d) * np.linalg.norm(c - b)\n",
+    "            else:\n",
+    "                z += 0\n",
     "\n",
     "    return z\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "b6060a91",
+   "execution_count": 4,
+   "id": "bb560878",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,8 +516,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "112e46c5",
+   "execution_count": 5,
+   "id": "6098a6a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "445940ea",
+   "id": "c85c8d78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3abe4ab9",
+   "id": "8c88a4b8",
    "metadata": {},
    "outputs": [
     {
@@ -615,8 +619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "de08169f",
+   "execution_count": 53,
+   "id": "ba115b7c",
    "metadata": {},
    "outputs": [
     {
@@ -625,6 +629,7 @@
      "text": [
       "8.730443426585962\n",
       "6.462140793601478\n",
+      "2.095788279447924\n",
       "-0.1169314104934514\n",
       "-16.98868614909526\n"
      ]
@@ -639,9 +644,11 @@
     "0.5454],[0.3691, 0.2191], [0.1071, 0.6857], [0.3220, 0.7591], [0.5653, 0.8421],\n",
     "[0.2407, 0.2724], [0.5959, 0.4374], [0.8393, 0.5203], [0.6064, 0.1111],[0.6885,\n",
     "0.7551]])\n",
+    "\n",
     "Gamma1Nodes = np.array([0, 1, 1, 0, 0, 1, 0]).astype(bool)\n",
     "Gamma1MidNodes = np.array([0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0 ]).astype(bool)\n",
     "Gamma2Edges = np.array([0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0]).astype(bool)\n",
+    "\n",
     "f = lambda x,y: 2*x*y - 5*y**2 + y -1\n",
     "g = lambda x,y: x**2+4*y\n",
     "h = lambda x,y: 3*x**3 - np.sin(y + x*y)\n",
@@ -650,16 +657,24 @@
     "Gamma1Nodes,Gamma1MidNodes,Gamma2Edges,2,7,3))\n",
     "print(fei2d(k,f,g,h,1,4,triangles,nodes,edges,triangleMidPts,midNodes,\n",
     "Gamma1Nodes,Gamma1MidNodes,Gamma2Edges,2,7,3))\n",
+    "print(fei2d(k,f,g,h,7,2,triangles,nodes,edges,triangleMidPts,midNodes,\n",
+    "Gamma1Nodes,Gamma1MidNodes,Gamma2Edges,1,7,3))\n",
     "print(fei2d(k,f,g,h,3,1,triangles,nodes,edges,triangleMidPts,midNodes,\n",
     "Gamma1Nodes,Gamma1MidNodes,Gamma2Edges,1,6,3))\n",
     "print(fei2d(k,f,g,h,2,3,triangles,nodes,edges,triangleMidPts,midNodes,\n",
-    "Gamma1Nodes,Gamma1MidNodes,Gamma2Edges,1,6,3))"
+    "Gamma1Nodes,Gamma1MidNodes,Gamma2Edges,1,6,3))\n",
+    "\n",
+    "# 8.730443426585966\n",
+    "# 6.462140793601477\n",
+    "# 2.0957882794479232\n",
+    "# -0.11693141049345054\n",
+    "# -16.988686149095262"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "94f75ba8",
+   "execution_count": 54,
+   "id": "7f180c7e",
    "metadata": {},
    "outputs": [
     {
@@ -736,8 +751,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "febc01b6",
+   "execution_count": 55,
+   "id": "dfa6c09d",
    "metadata": {},
    "outputs": [
     {
@@ -763,8 +778,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "b7c3edc4",
+   "execution_count": 56,
+   "id": "9cc16a7b",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31e06e9a",
+   "id": "7849f731",
    "metadata": {},
    "outputs": [],
    "source": []
