--- a/math520hw9.ipynb
+++ b/math520hw9.ipynb
@@ -100,7 +100,7 @@
     "         - (psi_xi, psi_eta): partial derivatives of the i-th shape function\n",
     "    \"\"\"\n",
     "    # Verify the point of evaluation is inside the standard triangle\n",
-    "    if not (0 <= xi <= 1 and 0 <= eta <= 1 and xi + eta <= 1):\n",
+    "    if not (-1e-12 <= xi <= 1+1e-12 and -1e-12 <= eta <= 1+1e-12 and xi + eta <= 1+1e-12):\n",
     "        return 0.0, 0.0\n",
     "\n",
     "    if p == 1:\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "beeefc78",
    "metadata": {},
    "outputs": [],
@@ -349,6 +349,7 @@
     "          Gamma1Nodes, Gamma1MidNodes, Gamma2Edges, shapeFn,\n",
     "          noOfIntegPt, noOfIntegPt1d):\n",
     "    \n",
+    "    edges = np.sort(edges, axis=1)\n",
     "    # Get the nodes of the triangle in python indexing (0-based)\n",
     "    tri = triangles[e - 1] - 1\n",
     "    x1, x2, x3 = nodes[tri[0]], nodes[tri[1]], nodes[tri[2]]\n",
@@ -390,7 +391,9 @@
     "\n",
     "    # Now handle Neumann boundary (Γ2)\n",
     "    if shapeFn == 1:\n",
-    "        edge_ids = [(tri[0], tri[1]), (tri[1], tri[2]), (tri[2], tri[0])]\n",
+    "        edge_ids = [(tri[0], tri[1]), \n",
+    "                    (tri[1], tri[2]), \n",
+    "                    (tri[2], tri[0])]\n",
     "    elif shapeFn == 2:\n",
     "        edge_ids = [(tri[0], triangleMidPts[e-1][0], tri[1]),\n",
     "                    (tri[1], triangleMidPts[e-1][1], tri[2]),\n",
@@ -412,16 +415,10 @@
     "                a = nodes[edge[0]]\n",
     "                b = midNodes[edge[1] - (len(nodes) + 1)]\n",
     "                c = nodes[edge[2]]\n",
-    "                def boundary_integrand_ab(s):\n",
-    "                    x, y = (1 - s) * a + s * b\n",
+    "                def boundary_integrand_ac(s):\n",
+    "                    x, y = (1 - s) * a + s * c\n",
     "                    return h(x, y) * shapeFn2d(i, x, y, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], shapeFn)\n",
-    "                def boundary_integrand_bc(s):\n",
-    "                    x, y = (1 - s) * b + s * c\n",
-    "                    return h(x, y) * shapeFn2d(i, x, y, x1[0], x1[1], x2[0], x2[1], x3[0], x3[1], shapeFn)\n",
-    "                z += gaussQuad1d(boundary_integrand_ab, 0, 1, noOfIntegPt1d) * np.linalg.norm(b - a)\n",
-    "                z += gaussQuad1d(boundary_integrand_bc, 0, 1, noOfIntegPt1d) * np.linalg.norm(c - b)\n",
-    "            else:\n",
-    "                z += 0\n",
+    "                z += gaussQuad1d(boundary_integrand_ac, 0, 1, noOfIntegPt1d) * np.linalg.norm(c - a)\n",
     "\n",
     "    return z\n"
    ]
@@ -590,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "8c88a4b8",
    "metadata": {},
    "outputs": [
@@ -614,12 +611,17 @@
     "print( keij2d(k,3,1,2,triangles,nodes,1,7))\n",
     "print( keij2d(k,1,3,1,triangles,nodes,1,6))\n",
     "print( keij2d(k,1,3,1,triangles,nodes,2,4))\n",
-    "print( keij2d(k,7,5,4,triangles,nodes,2,7))"
+    "print( keij2d(k,7,5,4,triangles,nodes,2,7))\n",
+    "\n",
+    "# -1.5477000325816006\n",
+    "# -0.9566051353517787\n",
+    "# 0.3179655621636229\n",
+    "# -4.12627915027286"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "ba115b7c",
    "metadata": {},
    "outputs": [
@@ -673,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "7f180c7e",
    "metadata": {},
    "outputs": [
@@ -751,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "dfa6c09d",
    "metadata": {},
    "outputs": [
@@ -760,9 +762,9 @@
      "output_type": "stream",
      "text": [
       "F1=[ 2.15599933 -3.59567129]\n",
-      "F2=[-5.84684204e-01  1.26225746e+00  1.42177820e+01  2.14441294e+01\n",
-      " -4.69734117e-02 -8.87194781e-02 -1.57372239e-01  5.03386628e+01\n",
-      " -4.78759472e+00  1.22588476e-01  2.31757815e+00  5.68519087e-02\n",
+      "F2=[-4.73824552e-01  1.25603332e+00  1.42177820e+01  2.14441969e+01\n",
+      " -4.69734117e-02 -8.87194781e-02 -1.57330588e-01  5.03386628e+01\n",
+      " -4.70043656e+00  1.22588476e-01  2.75803595e+00  9.42391742e-02\n",
       "  7.10921981e+01]\n"
      ]
     }
@@ -773,12 +775,17 @@
     "print(f'F1={RHSf1}')\n",
     "RHSf2 = loadF2d(k,f,g,h,triangles,nodes,edges,triangleMidPts,midNodes,indVec2,\n",
     "Gamma1Nodes,Gamma1MidNodes,Gamma2Edges,2,7,3)\n",
-    "print(f'F2={RHSf2}')"
+    "print(f'F2={RHSf2}')\n",
+    "\n",
+    "# F1=[ 2.15599933 -3.63928266]\n",
+    "# F2=[-4.73824552e-01 1.25603332e+00 1.42177820e+01 2.14441969e+01 -4.69734117e-02\n",
+    "# -8.87194781e-02 -1.57330588e-01 5.03386628e+01 -4.78765930e+00 1.22588476e-01\n",
+    "# 2.75803595e+00 9.42391742e-02 7.10921981e+01]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "9cc16a7b",
    "metadata": {},
    "outputs": [
